tekton/php-hello/el-php-hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: vote-ui
  name: el-php-hello
  namespace: nodejs-web-app-pipelines
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-php-hello-event-listener
    weight: 100
